Closed
Bug 633666
Opened 15 years ago
Closed 15 years ago
PathifyURI breaks caching of packed XPI js components
Categories
(Core :: XPConnect, defect)
Core
XPConnect
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | - |
People
(Reporter: mwu, Assigned: mwu)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
683 bytes,
patch
|
benjamin
:
review+
shaver
:
approval2.0+
|
Details | Diff | Splinter Review |
PathifyURI checks the return value of GetHost. GetHost is not always implemented, particularly on jar uris. JAR uris are very common when loading js components from packed XPIs. This results in js components from packed extensions not getting cached. Appears to be a regression from bug 609785.
Attachment #511893 -
Flags: review?(benjamin)
| Assignee | ||
Updated•15 years ago
|
blocking2.0: --- → ?
| Assignee | ||
Updated•15 years ago
|
OS: Linux → All
Hardware: x86_64 → All
Updated•15 years ago
|
Attachment #511893 -
Flags: review?(benjamin) → review+
Updated•15 years ago
|
Attachment #511893 -
Flags: approval2.0+
Comment 1•15 years ago
|
||
What's the impact of them not being cached? Correctness? Performance in some cases?
This has review, so let's get it in, but if it bounces I think it bounces for good.
blocking2.0: ? → -
| Assignee | ||
Comment 2•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•