Bug 633666 - Ignore return code from GetHost in PathifyURI, r=bsmedberg a=shaver